Upgrading BCL packages pt. 1 (#48547)
* initial changes

* fixes 1

* upgrade system.memory.data in test projects

* fix aot warnings

* webpubsub fixes

* more webpubsub fixes

* use polyfill for webpubsub json converters for now

* pin versions

* ignore tfm warnings

* shift to net8.0

* more web pub sub fixes

* digital twins

* monitor

* slimming num of package upgrades to make pipeline debugging easier

* also update test reference

* experiment

* another package

* try sb update

* experiment 2

* digital twins

* just microsoft bcl async interfaces

* fixed

* get encodings too

* fix extra new line added when fixing conflict

* update servicebus api

--- a/sdk/webpubsub/Microsoft.Azure.WebPubSub.AspNetCore/src/Microsoft.Azure.WebPubSub.AspNetCore.csproj
+++ b/sdk/webpubsub/Microsoft.Azure.WebPubSub.AspNetCore/src/Microsoft.Azure.WebPubSub.AspNetCore.csproj
@@ -6,10 +6,11 @@
     <!--The ApiCompatVersion is managed automatically and should not generally be modified manually.-->
     <ApiCompatVersion>1.4.0</ApiCompatVersion>
     <PackageTags>Azure, WebPubSub</PackageTags>
-    <RequiredTargetFrameworks>netcoreapp3.1</RequiredTargetFrameworks>
+    <RequiredTargetFrameworks>net8.0</RequiredTargetFrameworks>
     <TargetFrameworks>$(RequiredTargetFrameworks)</TargetFrameworks>
     <NoWarn>$(NoWarn);419</NoWarn>
     <GenerateAPIListing>true</GenerateAPIListing>
+		<ApiCompatBaselineTargetFramework Condition="'$(TargetFramework)' == 'net8.0'">netcoreapp3.1</ApiCompatBaselineTargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
