--- a/sdk/cloudmachine/Azure.Projects.AI.Foundry/Azure.Projects.AI.Foundry.csproj
+++ b/sdk/cloudmachine/Azure.Projects.AI.Foundry/Azure.Projects.AI.Foundry.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <LangVersion>latest</LangVersion>
-    <Nullable>enable</Nullable>
+    <Nullable>disable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
