--- a/sdk/cloudmachine/Azure.Projects/tests/Azure.Projects.Tests.csproj
+++ b/sdk/cloudmachine/Azure.Projects/tests/Azure.Projects.Tests.csproj
@@ -14,7 +14,7 @@
   <ItemGroup>
     <ProjectReference Include="$(AzureCoreTestFramework)" />
     <ProjectReference Include="..\src\Azure.Projects.csproj" />
-    <ProjectReference Include="..\..\Azure.Projects.OpenAI\src\Azure.Projects.AI.csproj" />
+    <ProjectReference Include="..\..\Azure.Projects.AI\src\Azure.Projects.AI.csproj" />
     <ProjectReference Include="..\..\Azure.Projects.Provisioning\src\Azure.Projects.Provisioning.csproj" />
   </ItemGroup>
   
