--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -499,7 +499,7 @@
 # ServiceOwners:                                                   @thang-bit
 
 # PRLabel: %Event Grid
-/sdk/eventgrid/                                                    @Kishp01 @ahamad-MS @JoshLove-msft @jsquire @m-redding
+/sdk/eventgrid/                                                    @JoshLove-msft @jsquire @m-redding
 
 # PRLabel: %Event Grid %Functions
 /sdk/eventgrid/Microsoft.Azure.WebJobs.Extensions.EventGrid/       @jsquire @JoshLove-msft
@@ -512,7 +512,7 @@
 /sdk/eventhub/                                                     @jsquire @m-redding
 
 # PRLabel: %Event Hubs %Functions
-/sdk/eventhub/Microsoft.Azure.WebJobs.Extensions.EventHubs/        @JoshLove-msft @jsquire
+/sdk/eventhub/Microsoft.Azure.WebJobs.Extensions.EventHubs/        @m-redding @jsquire @jeo02
 
 # PRLabel: %Event Hubs
 /sdk/eventhub/Microsoft.Azure.EventHubs/                           @serkantkaraca @sjkwak
@@ -681,10 +681,10 @@
 # ServiceOwners:                                                   @ajlam @ambhatna @kummanish
 
 # PRLabel: %Mixed Reality
-/sdk/mixedreality/                                                 @crtreasu @rgarcia @JoshLove-msft
+/sdk/mixedreality/                                                 @crtreasu @rgarcia
 
 # PRLabel: %Mixed Reality
-/sdk/objectanchors/                                                @crtreasu @rgarcia @JoshLove-msft
+/sdk/objectanchors/                                                @crtreasu @rgarcia
 
 # PRLabel: %Remote Rendering
 /sdk/remoterendering/                                              @FlorianBorn71 @MichaelZp0 @ChristopherManthei
@@ -732,7 +732,7 @@
 # ServiceOwners:                                                   @netwatchsuppgithub
 
 # PRLabel: %Network - DNS
-/sdk/dns/                                                         @dnssuppgithub
+/sdk/dns/                                                          @dnssuppgithub
 
 # ServiceLabel: %Network - DNS
 # ServiceOwnerS:                                                   @dnssuppgithub
@@ -780,10 +780,10 @@
 # ServiceOwners:                                                   @sunilagarwal @lfittl-msft @sr-msft @niklarin
 
 # PRLabel: %Provisioning
-/sdk/provisioning/                                                 @JoshLove-msft @tg-msft @christothes @KrzysztofCwalina
+/sdk/provisioning/                                                 @ArthurMa1978 @ArcturusZhang
 
 # ServiceLabel: %Provisioning
-# AzureSdkOwners:                                                  @JoshLove-msft
+# AzureSdkOwners:                                                  @ArthurMa1978
 
 # PRLabel: %Quantum
 /sdk/quantum/Azure.Quantum.Jobs/                                   @xfield
@@ -822,27 +822,24 @@
 # ServiceOwners:                                                   @amirkeren
 
 # PRLabel: %Search
-/sdk/search/                                                       @ShivangiReja @kinelski @tg-msft @Azure/azsdk-search
+/sdk/search/                                                       @ShivangiReja @kinelski @Azure/azsdk-search
 
 # ServiceLabel: %Search
 # AzureSdkOwners:                                                  @ShivangiReja
 # ServiceOwners:                                                   @arv100kri @bleroy @tjacobhi
 
 # PRLabel: %Service Bus
-/sdk/servicebus/                                                   @JoshLove-msft @jsquire @m-redding
+/sdk/servicebus/                                                   @jeo02 @jsquire @m-redding
 
 # PRLabel: %Service Bus %Functions
-/sdk/servicebus/Microsoft.Azure.WebJobs.Extensions.ServiceBus/     @JoshLove-msft @jsquire
+/sdk/servicebus/Microsoft.Azure.WebJobs.Extensions.ServiceBus/     @m-redding @jsquire @jeo02
 
 # ServiceLabel: %Service Bus
-# AzureSdkOwners:                                                  @JoshLove-msft
+# AzureSdkOwners:                                                  @jsquire
 # ServiceOwners:                                                   @shankarsama @EldertGrootenboer
 
-# ServiceLabel: %Service Fabric
-# ServiceOwners:                                                   @QingChenmsft @vaishnavk @juhacket
-
 # PRLabel: %Schema Registry
-/sdk/schemaregistry/                                               @jsquire @JoshLove-msft @m-redding
+/sdk/schemaregistry/                                               @jsquire @m-redding
 
 # ServiceLabel: %Schema Registry
 # AzureSdkOwners:                                                  @m-redding
@@ -994,12 +991,6 @@
 # ServiceLabel: %Device Registry %Mgmt
 # ServiceOwners:                                                   @davidemontanari @atastrophic @marcodalessandro @rohankhandelwal @riteshrao
 
-# PRLabel: %DevOps - Infrastructure
-/sdk/devopsinfrastructure/Azure.ResourceManager.*/                 @oolaoluwa
-
-# ServiceLabel: %DevOps - Infrastructure
-# ServiceOwners:                                                   @oolaoluwa
-
 # PRLabel: %Elastic
 /sdk/elastic/Azure.ResourceManager.Elastic/                        @ArthurMa1978
 
@@ -1042,12 +1033,6 @@
 # PRLabel: %Network - Mobile
 /sdk/mobilenetwork/Azure.ResourceManager.*/                        @ArcturusZhang @ArthurMa1978
 
-# PRLabel: %Network - DNS Private Resolver
-/sdk/dnsresolver/Azure.ResourceManager.*/                          @jamesvoongms @jotrivet
-
-# ServiceLabel: %Network - DNS Private Resolver %Mgmt
-# ServiceOwners:                                                   @jamesvoongms @jotrivet
-
 # PRLabel: %New Relic
 /sdk/newrelicobservability/Azure.ResourceManager.*/                @vipray-ms
 
@@ -1079,13 +1064,19 @@
 # ServiceOwners:                                                   @Daya-Patil
 
 # PRLabel: %Secret Store Extension
-/sdk/edgeworkloadsecurity/Azure.ResourceManager.*/                 @cjoprey @locomotiveviaduct
+#/sdk/edgeworkloadsecurity/Azure.ResourceManager.*/                 @cjoprey @v
 
 # ServiceLabel: %Secret Store Extension %Mgmt
 # ServiceOwners:                                                   @cjoprey @locomotiveviaduct
 
 # PRLabel: %Self Help
 /sdk/selfhelp/Azure.ResourceManager.*/                             @ArcturusZhang @ArthurMa1978
+
+# PRLabel: %Service Fabric
+/sdk/servicefabric/Azure.ResourceManager.*/                       @QingChenmsft @vaishnavk @juhacket
+
+# ServiceLabel: %Service Fabric
+# ServiceOwners:                                                   @QingChenmsft @vaishnavk @juhacket
 
 # PRLabel: %Spring App Discovery
 /sdk/springappdiscovery/Azure.ResourceManager.*/                   @sunkun99 @ArcturusZhang @ArthurMa1978
