--- a/sdk/monitor/Azure.Monitor.OpenTelemetry.Exporter/src/Azure.Monitor.OpenTelemetry.Exporter.csproj
+++ b/sdk/monitor/Azure.Monitor.OpenTelemetry.Exporter/src/Azure.Monitor.OpenTelemetry.Exporter.csproj
@@ -1,1 +1,36 @@
-<Project Sdk="Microsoft.NET.Sdk">  <PropertyGroup>    <Description>An OpenTelemetry .NET exporter that exports to Azure Monitor</Description>    <AssemblyTitle>AzureMonitor OpenTelemetry Exporter</AssemblyTitle>    <Version>1.4.0-beta.3</Version>    <!--The ApiCompatVersion is managed automatically and should not generally be modified manually.-->    <ApiCompatVersion>1.3.0</ApiCompatVersion>    <PackageTags>Azure Monitor OpenTelemetry Exporter ApplicationInsights</PackageTags>    <TargetFrameworks>$(RequiredTargetFrameworks)</TargetFrameworks>    <IncludeOperationsSharedSource>true</IncludeOperationsSharedSource>    <DefineConstants>$(DefineConstants);AZURE_MONITOR_EXPORTER;</DefineConstants>  </PropertyGroup>  <ItemGroup>    <!-- Versions are defined in eng/Packages.Data.props -->    <!-- Whenever updating OpenTelemetry dependencies, confirm that Test dependencies are also updated. -->    <PackageReference Include="Azure.Core" />    <PackageReference Include="OpenTelemetry" />    <PackageReference Include="OpenTelemetry.PersistentStorage.FileSystem" />    <PackageReference Include="OpenTelemetry.Extensions.Hosting" />  </ItemGroup>  <!-- Shared source from Azure.Core -->  <ItemGroup>    <Compile Include="$(AzureCoreSharedSources)ArrayBufferWriter.cs" LinkBase="Shared" />    <Compile Include="$(AzureCoreSharedSources)ConnectionString.cs" LinkBase="Shared" />    <Compile Include="$(AzureCoreSharedSources)EventSourceEventFormatting.cs" LinkBase="Shared" />  </ItemGroup>  <!-- Shared sources from Azure.Monitor.OpenTelemetry.LiveMetrics -->  <ItemGroup>    <Compile Include="..\..\Azure.Monitor.OpenTelemetry.LiveMetrics\src\**\*.cs" LinkBase="Shared\LiveMetrics" />    <Compile Remove="..\..\Azure.Monitor.OpenTelemetry.LiveMetrics\src\Properties\AssemblyInfo.cs" />  </ItemGroup></Project>
+<Project Sdk="Microsoft.NET.Sdk">
+  <PropertyGroup>
+    <Description>An OpenTelemetry .NET exporter that exports to Azure Monitor</Description>
+    <AssemblyTitle>AzureMonitor OpenTelemetry Exporter</AssemblyTitle>
+    <Version>1.4.0-beta.3</Version>
+    <!--The ApiCompatVersion is managed automatically and should not generally be modified manually.-->
+    <ApiCompatVersion>1.3.0</ApiCompatVersion>
+    <PackageTags>Azure Monitor OpenTelemetry Exporter ApplicationInsights</PackageTags>
+    <TargetFrameworks>$(RequiredTargetFrameworks)</TargetFrameworks>
+    <IncludeOperationsSharedSource>true</IncludeOperationsSharedSource>
+    <DefineConstants>$(DefineConstants);AZURE_MONITOR_EXPORTER;</DefineConstants>
+  </PropertyGroup>
+
+  <ItemGroup>
+    <!-- Versions are defined in eng/Packages.Data.props -->
+    <!-- Whenever updating OpenTelemetry dependencies, confirm that Test dependencies are also updated. -->
+    <PackageReference Include="Azure.Core" />
+    <PackageReference Include="OpenTelemetry" />
+    <PackageReference Include="OpenTelemetry.PersistentStorage.FileSystem" />
+    <PackageReference Include="OpenTelemetry.Extensions.Hosting" />
+  </ItemGroup>
+
+  <!-- Shared source from Azure.Core -->
+  <ItemGroup>
+    <Compile Include="$(AzureCoreSharedSources)ArrayBufferWriter.cs" LinkBase="Shared" />
+    <Compile Include="$(AzureCoreSharedSources)ConnectionString.cs" LinkBase="Shared" />
+    <Compile Include="$(AzureCoreSharedSources)EventSourceEventFormatting.cs" LinkBase="Shared" />
+  </ItemGroup>
+
+  <!-- Shared sources from Azure.Monitor.OpenTelemetry.LiveMetrics -->
+  <ItemGroup>
+    <Compile Include="..\..\Azure.Monitor.OpenTelemetry.LiveMetrics\src\**\*.cs" LinkBase="Shared\LiveMetrics" />
+    <Compile Remove="..\..\Azure.Monitor.OpenTelemetry.LiveMetrics\src\Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+
+</Project>
