--- a/sdk/neonpostgres/ci.mgmt.yml
+++ b/sdk/neonpostgres/ci.mgmt.yml
@@ -1,6 +1,7 @@
 # NOTE: Please refer to https://aka.ms/azsdk/engsys/ci-yaml before editing this file.
 
 trigger: none
+
 pr:
   branches:
     include:
@@ -10,13 +11,14 @@ pr:
     - release/*
   paths:
     include:
-    - sdk/neonpostgres/ci.mgmt.yml
-    - sdk/neonpostgres/Azure.ResourceManager.NeonPostgres/
+    - sdk/liftrneon/ci.mgmt.yml
+    - sdk/liftrneon/Azure.ResourceManager.NeonPostgres/
+
 
 extends:
   template: /eng/pipelines/templates/stages/archetype-sdk-client.yml
   parameters:
-    ServiceDirectory: neonpostgres
+    ServiceDirectory: liftrneon
     LimitForPullRequest: true
     Artifacts:
     - name: Azure.ResourceManager.NeonPostgres
