Prepare Azure.Projects packages for release

--- a/sdk/cloudmachine/Azure.Projects.Provisioning/src/Azure.Projects.Provisioning.csproj
+++ b/sdk/cloudmachine/Azure.Projects.Provisioning/src/Azure.Projects.Provisioning.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <Description>Azure.Projects.Provisioning simplifies declarative resource provisioning in .NET.</Description>
