--- a/sdk/cloudmachine/Azure.Projects.Web/src/Azure.Projects.Web.csproj
+++ b/sdk/cloudmachine/Azure.Projects.Web/src/Azure.Projects.Web.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <Description>Azure.Projects.Web is an ASP.NET Core extensions for Azure.Projects</Description>
