--- a/eng/packages/http-client-csharp/ci.yml
+++ b/eng/packages/http-client-csharp/ci.yml
@@ -58,10 +58,18 @@ extends:
     BuildPrereleaseVersion: ${{ parameters.BuildPrereleaseVersion }}
     UseTypeSpecNext: ${{ parameters.UseTypeSpecNext }}
     ${{ if eq(variables['System.TeamProject'], 'internal') }}:
-      ShouldPublish: ${{ variables.ShouldPublish }}
-      PublishPublic: ${{ variables.PublishPublic }}
-      PublishDependsOnTest: ${{ variables.PublishPublic }}
-      ShouldRegenerate: ${{ parameters.ShouldRegenerate }}
+      ${{ if eq(variables['Build.Reason'], 'Manual') }}:
+        ShouldPublish: ${{ parameters.ShouldPublish }}
+        ${{ if startswith(variables['Build.SourceBranch'], 'refs/pull/') }}:  # PR ref's can't be published to public, even in a manual run
+          PublishPublic: false
+          PublishDependsOnTest: false
+        ${{ else }}: # Any other manual run can go to public
+           PublishPublic: ${{ parameters.PublishPublic }}
+           PublishDependsOnTest: ${{ parameters.PublishPublic }}
+      ${{ else }}: # All automatic runs publish, but only CI of main goes public
+        PublishPublic: true
+        PublishDependsOnTest: false
+        PublishPublic: ${{ and(eq(variables['Build.Reason'], 'IndividualCI'), eq(variables['Build.SourceBranch'], 'refs/head/main')) }}
       RegenerationJobCount: 5
       MinimumPerJob: 10
       OnlyGenerateTypespec: true
