--- a/eng/packages/http-client-csharp-mgmt/package.json
+++ b/eng/packages/http-client-csharp-mgmt/package.json
@@ -10,10 +10,10 @@
     "clean": "rimraf ./dist ./emitter/temp && dotnet clean ./generator",
     "build:emitter": "tsc -p ./emitter/tsconfig.build.json",
     "build:generator": "dotnet build ./generator",
-    "build": "pnpm run build:emitter && pnpm run build:generator",
+    "build": "npm run build:emitter && npm run build:generator",
     "test:emitter": "vitest run -c ./emitter/vitest.config.ts --passWithNoTests",
     "test:generator": "dotnet test ./generator --logger \"trx;LogFileName=debug.trx\"",
-    "test": "pnpm run test:generator && pnpm run test:emitter",
+    "test": "npm run test:generator && npm run test:emitter",
     "lint": "eslint . --max-warnings=0",
     "lint:fix": "eslint . --fix",
     "prettier:fix": "prettier --write --config .prettierrc.json ./**/*.ts",
