--- a/eng/packages/http-client-csharp/package.json
+++ b/eng/packages/http-client-csharp/package.json
@@ -23,28 +23,27 @@
     "dist/**"
   ],
   "dependencies": {
-    "@typespec/http-client-csharp": "1.0.0-alpha.20250330.1"
+    "@typespec/http-client-csharp": "1.0.0-alpha.20250407.1"
   },
   "devDependencies": {
-    "@azure-tools/azure-http-specs": "0.1.0-alpha.10",
-    "@azure-tools/typespec-autorest": "0.53.0",
-    "@azure-tools/typespec-azure-core": "0.53.0",
-    "@azure-tools/typespec-azure-resource-manager": "0.53.0",
-    "@azure-tools/typespec-azure-rulesets": "0.53.0",
-    "@azure-tools/typespec-client-generator-core": "0.53.1",
+    "@azure-tools/azure-http-specs": "0.1.0-alpha.13",
+    "@azure-tools/typespec-autorest": "0.54.0",
+    "@azure-tools/typespec-azure-core": "0.54.0",
+    "@azure-tools/typespec-azure-resource-manager": "0.54.0",
+    "@azure-tools/typespec-azure-rulesets": "0.54.0",
+    "@azure-tools/typespec-client-generator-core": "0.54.0",
     "@eslint/js": "^9.2.0",
     "@types/node": "~22.7.5",
     "@types/prettier": "^2.6.3",
-    "@typespec/compiler": "0.67.1",
-    "@typespec/http": "0.67.1",
-    "@typespec/http-specs": "0.1.0-alpha.15",
-    "@typespec/json-schema": "0.67.1",
-    "@typespec/library-linter": "0.67.1",
-    "@typespec/openapi": "0.67.1",
-    "@typespec/rest": "0.67.1",
-    "@typespec/spector": "0.1.0-alpha.10",
-    "@typespec/versioning": "0.67.1",
-    "@typespec/xml": "0.67.1",
+    "@typespec/compiler": "1.0.0-rc.0",
+    "@typespec/http": "1.0.0-rc.0",
+    "@typespec/http-specs": "0.1.0-alpha.17",
+    "@typespec/json-schema": "1.0.0-rc.0",
+    "@typespec/library-linter": "0.68.0",
+    "@typespec/openapi": "1.0.0-rc.0",
+    "@typespec/rest": "0.68.0",
+    "@typespec/versioning": "0.68.0",
+    "@typespec/xml": "0.68.0",
     "@vitest/coverage-v8": "^3.0.5",
     "@vitest/ui": "^3.0.5",
     "c8": "^10.1.2",
