--- a/sdk/cloudmachine/Azure.Projects/samples/AICop/aicop.csproj
+++ b/sdk/cloudmachine/Azure.Projects/samples/AICop/aicop.csproj
@@ -15,11 +15,16 @@
     <ProjectReference Include="..\..\..\Azure.Projects.AI\src\Azure.Projects.AI.csproj" />
     <ProjectReference Include="..\..\src\Azure.Projects.csproj" />
     <ProjectReference Include="..\..\..\Azure.Projects.Provisioning\src\Azure.Projects.Provisioning.csproj" />
-    <ProjectReference Include="..\ConsoleAgent\ConsoleAgent.csproj" />
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="appsettings.json">
+    <None Update="guidelines\azure_namespaces.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="guidelines\general_naming.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="guidelines\namespaces.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
