--- a/eng/packages/http-client-csharp/ci.yml
+++ b/eng/packages/http-client-csharp/ci.yml
@@ -66,7 +66,7 @@ extends:
       ${{ else }}: # All automatic runs publish, but only CI of main goes public
         ShouldPublish: true
         PublishDependsOnTest: false
-        PublishPublic: ${{ and(eq(variables['Build.Reason'], 'IndividualCI'), eq(variables['Build.SourceBranch'], 'refs/head/main')) }}
+        PublishPublic: ${{ and(eq(variables['Build.Reason'], 'IndividualCI'), eq(variables['Build.SourceBranch'], 'refs/heads/main')) }}
       RegenerationJobCount: 5
       MinimumPerJob: 10
       OnlyGenerateTypespec: true
