--- a/eng/common/pipelines/templates/archetype-typespec-emitter.yml
+++ b/eng/common/pipelines/templates/archetype-typespec-emitter.yml
@@ -201,15 +201,15 @@ extends:
               $env:GIT_DISCOVERY_ACROSS_FILESYSTEM = "1"
               if (Test-Path -Path '$(buildArtifactsPath)/overrides.json') {
                 Write-Host "Using overrides.json to generate emitter-package.json"
-                tsp-client generate-config-files 
-                --package-json '$(buildArtifactsPath)/lock-files/package.json' 
-                --output-dir '$(Build.ArtifactStagingDirectory)' 
-                --emitter-package-json-path  '${{ parameters.EmitterPackageJsonPath }}'
+                tsp-client generate-config-files `
+                --package-json '$(buildArtifactsPath)/lock-files/package.json' `
+                --output-dir '$(Build.ArtifactStagingDirectory)' `
+                --emitter-package-json-path  '${{ parameters.EmitterPackageJsonPath }}' `
                 --overrides '$(buildArtifactsPath)/overrides.json'
               } else {
-                tsp-client generate-config-files 
-                --package-json '$(buildArtifactsPath)/lock-files/package.json' 
-                --output-dir '$(Build.ArtifactStagingDirectory)' 
+                tsp-client generate-config-files `
+                --package-json '$(buildArtifactsPath)/lock-files/package.json' `
+                --output-dir '$(Build.ArtifactStagingDirectory)' `
                 --emitter-package-json-path  '${{ parameters.EmitterPackageJsonPath }}'
               }
             displayName: Generate emitter-package.json and emitter-package-lock files
