--- a/eng/common/pipelines/templates/archetype-typespec-emitter.yml
+++ b/eng/common/pipelines/templates/archetype-typespec-emitter.yml
@@ -196,7 +196,7 @@ extends:
           - pwsh: |
               npm install -g @azure-tools/typespec-client-generator-cli@latest
             displayName: Install tsp-client
-            workingDirectory: $(buildArtifactsPath)
+            workingDirectory: $(Build.SourcesDirectory)
 
           - pwsh: |
               $env:GIT_DISCOVERY_ACROSS_FILESYSTEM = "1"
