--- a/eng/common/pipelines/templates/archetype-typespec-emitter.yml
+++ b/eng/common/pipelines/templates/archetype-typespec-emitter.yml
@@ -202,13 +202,13 @@ extends:
                 Write-Host "Using overrides.json to generate emitter-package.json"
                 tsp-client generate-config-files `
                 --package-json '$(buildArtifactsPath)/lock-files/package.json' `
-                --output-dir '$(buildArtifactsPath)' `
+                --output-dir '$(Build.SourcesDirectory)' `
                 --emitter-package-json-path  '${{ parameters.EmitterPackageJsonPath }}' `
                 --overrides '$(buildArtifactsPath)/overrides.json'
               } else {
                 tsp-client generate-config-files `
                 --package-json '$(buildArtifactsPath)/lock-files/package.json' `
-                --output-dir '$(buildArtifactsPath)' `
+                --output-dir '$(Build.SourcesDirectory)' `
                 --emitter-package-json-path  '${{ parameters.EmitterPackageJsonPath }}'
               }
             displayName: Generate emitter-package.json and emitter-package-lock files
