Update dependency of Azure emitter for mgmt emitter

--- a/eng/packages/http-client-csharp-mgmt/package.json
+++ b/eng/packages/http-client-csharp-mgmt/package.json
@@ -23,7 +23,7 @@
     "dist/**"
   ],
   "dependencies": {
-    "@azure-typespec/http-client-csharp": "file:../http-client-csharp"
+    "@azure-typespec/http-client-csharp": "1.0.0-alpha.20250409.15"
   },
   "devDependencies": {
     "@azure-tools/azure-http-specs": "0.1.0-alpha.13",
