--- a/sdk/ai/Azure.AI.Projects.OneDP/src/Azure.AI.Projects.OneDP.csproj
+++ b/sdk/ai/Azure.AI.Projects.OneDP/src/Azure.AI.Projects.OneDP.csproj
@@ -28,5 +28,8 @@
   <ItemGroup>
     <None Include="..\tsp-location.yaml" Link="tsp-location.yaml" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Custom\Run\" />
+  </ItemGroup>
 
 </Project>
