--- a/sdk/openai/Azure.AI.OpenAI/src/Azure.AI.OpenAI.csproj
+++ b/sdk/openai/Azure.AI.OpenAI/src/Azure.AI.OpenAI.csproj
@@ -59,6 +59,7 @@
     <Otherwise>
       <ItemGroup>
         <PackageReference Include="Azure.Core" />
+        <PackageReference Include="System.Memory.Data" />
       </ItemGroup>
     </Otherwise>
   </Choose>
